# xfce-brightness

./: .ccls  .gitignore  README.md  configure.ac.in
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
panel-plugin/: Makefile.am  brightness-dialogs.c  brightness-dialogs.h  brightness.c  brightness.h
po/: POTFILES.in  zh_CN.po
